--- a/index.html
+++ b/index.html
@@ -1,285 +1,328 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- ================= META ================= -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>$UDI</title>
 
-  <!-- ================= ICON ================= -->
   <link rel="icon" href="UDifavicon.png" type="image/png">
   <link rel="apple-touch-icon" href="UDifavicon.png">
-
-  <!-- ================= FONT ================= -->
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 
-  <!-- ================= STYLE ================= -->
   <style>
-    /* ===== RESET ===== */
-    *,*::before,*::after{box-sizing:border-box}
-    html,body{
-      margin:0;padding:0;width:100%;height:100%;overflow-x:hidden
+    *, *::before, *::after { box-sizing: border-box; }
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow-x: hidden;
     }
 
-    body{
-      background:#fd8c00;
-      color:#fff;
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-family:'Special Elite',monospace!important
+    body {
+      background: #fd8c00;
+      color: #fff;
+      font-family: 'Special Elite', monospace;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
 
-    /* ===== COMMON ===== */
-    .footer{
-      position:fixed;
-      bottom:15px;
-      left:50%;
-      transform:translateX(-50%);
-      font-size:.75rem;
-      font-weight:bold;
-      letter-spacing:1.5px;
-      display:flex;
-      gap:20px;
-      white-space:nowrap
+    /* ================= PASSWORD ================= */
+    .password-screen {
+      position: fixed;
+      inset: 0;
+      background: #fd8c00;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+      padding: 20px;
     }
 
-    @keyframes bounce{
-      0%,100%{transform:translateY(0)}
-      50%{transform:translateY(-8px)}
+    .pass-container {
+      text-align: center;
+      max-width: 300px;
+      width: 100%;
     }
 
-    /* ===== PASSWORD ===== */
-    .password-screen{
-      position:fixed;
-      inset:0;
-      background:#fd8c00;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:20px;
-      z-index:5
+    .pass-logo {
+      width: 240px;
+      margin-bottom: 12px;
+      animation: bounce 1.8s infinite;
     }
 
-    .pass-container{max-width:300px;width:100%;text-align:center}
-
-    .pass-logo{
-      width:240px;
-      max-width:90vw;
-      margin-bottom:10px;
-      animation:bounce 1.8s infinite
+    #passInput {
+      width: 100%;
+      padding: 16px 20px;
+      border-radius: 30px;
+      border: none;
+      outline: none;
+      text-align: center;
+      font-size: 1.2rem;
+      letter-spacing: 3px;
+      color: #fff;
+      background: rgba(255,255,255,.08);
     }
 
-    #passInput{
-      width:100%;
-      padding:18px 20px;
-      background:rgba(255,255,255,.08);
-      border:none;
-      border-radius:30px;
-      color:#fff;
-      font-size:1.2rem;
-      text-align:center;
-      letter-spacing:3px;
-      backdrop-filter:blur(10px);
-      outline:none
+    .pass-error {
+      margin-top: 10px;
+      color: #ff1b26;
+      font-weight: bold;
+      opacity: 0;
+      transition: .3s;
     }
 
-    #passInput::placeholder{color:rgba(255,255,255,.3)}
+    .pass-error.show { opacity: 1; }
 
-    .pass-error{
-      margin-top:10px;
-      color:#ff1b26;
-      font-weight:bold;
-      font-size:1.1rem;
-      opacity:0;
-      transition:.4s
-    }
-    .pass-error.show{opacity:1}
-
-    /* ===== FORM ===== */
-    .container{
-      max-width:420px;
-      width:100%;
-      padding:8px;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      text-align:center
+    /* ================= MAIN FORM ================= */
+    .container {
+      max-width: 420px;
+      width: 100%;
+      text-align: center;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      padding: 10px;
     }
 
-    .logo{
-      width:300px;
-      max-width:90vw;
-      margin-bottom:10px
+    .logo {
+      width: 300px;
+      margin-bottom: 10px;
     }
 
-    .instructions{
-      margin-bottom:15px;
-      font-size:1.1rem;
-      color:rgba(255,255,255,.8);
-      max-width:360px
+    .instructions {
+      margin-bottom: 16px;
+      font-size: 1.1rem;
+      opacity: .85;
     }
 
-    .input-wrap{margin:8px 0;width:100%}
-
-    .compact-input{
-      width:100%;
-      max-width:360px;
-      padding:16px 20px;
-      background:rgba(255,255,255,.08);
-      border:none;
-      border-radius:30px;
-      color:#fff;
-      font-size:1.35rem;
-      text-align:center;
-      backdrop-filter:blur(10px);
-      outline:none
+    .compact-input {
+      width: 100%;
+      max-width: 360px;
+      padding: 16px 20px;
+      border-radius: 30px;
+      border: none;
+      outline: none;
+      margin: 8px 0;
+      text-align: center;
+      font-size: 1.3rem;
+      color: #fff;
+      background: rgba(255,255,255,.08);
     }
 
-    .compact-input::placeholder{color:rgba(255,255,255,.55)}
-    .compact-input:focus{background:rgba(255,255,255,.15)}
-
-    button{
-      margin-top:10px;
-      padding:14px 40px;
-      background:rgba(255,255,255,.08);
-      border:none;
-      border-radius:30px;
-      color:#fff;
-      font-size:1.4rem;
-      font-weight:bold;
-      letter-spacing:3px;
-      cursor:pointer;
-      transition:.3s
+    .checkbox-group {
+      display: flex;
+      justify-content: center;
+      gap: 28px;
+      margin: 20px 0;
+      flex-wrap: wrap;
     }
 
-    button:hover{
-      background:#fff;
-      color:#ff8c00;
-      transform:translateY(-2px)
+    .checkbox-label {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 1.1rem;
+      cursor: pointer;
     }
 
-    /* ===== CHECKBOX ===== */
-    .checkbox-group{
-      margin:20px 0;
-      display:flex;
-      justify-content:center;
-      gap:30px;
-      max-width:360px;
-      width:100%
+    .checkbox {
+      width: 20px;
+      height: 20px;
+      appearance: none;
+      background: rgba(255,255,255,.15);
+      border-radius: 5px;
+      cursor: pointer;
+      position: relative;
     }
 
-    .checkbox-label{
-      display:flex;
-      align-items:center;
-      gap:8px;
-      font-size:1.1rem;
-      cursor:pointer
+    .checkbox:checked::after {
+      content: '✔';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #61ff58;
+      font-size: 1.2rem;
     }
 
-    .checkbox{
-      width:20px;
-      height:20px;
-      appearance:none;
-      background:rgba(255,255,255,.08);
-      border-radius:5px;
-      position:relative
+    button {
+      margin-top: 12px;
+      padding: 14px 40px;
+      border-radius: 30px;
+      border: none;
+      font-size: 1.3rem;
+      font-weight: bold;
+      letter-spacing: 3px;
+      cursor: pointer;
+      background: rgba(255,255,255,.1);
+      color: #fff;
+      transition: .3s;
     }
 
-    .checkbox:checked::before{
-      content:'✔';
-      position:absolute;
-      top:50%;
-      left:50%;
-      transform:translate(-50%,-50%);
-      color:#61ff58
+    button:hover {
+      background: #fff;
+      color: #fd8c00;
     }
 
-    /* ===== MESSAGE ===== */
-    .message{
-      margin-top:20px;
-      font-size:1rem;
-      font-weight:bold;
-      letter-spacing:2px;
-      display:none
+    .message {
+      margin-top: 20px;
+      font-weight: bold;
+      display: none;
+      white-space: pre-line;
     }
 
-    .error-msg{color:#ff1b26}
-    .welcome{
-      font-size:1.3rem;
-      color:#61ff58;
-      animation:bounce 1.8s infinite
+    .error-msg { color: #ff1b26; }
+    .welcome { color: #61ff58; animation: bounce 1.8s infinite; }
+
+    .footer {
+      position: fixed;
+      bottom: 15px;
+      font-size: .75rem;
+      letter-spacing: 1.5px;
+      display: flex;
+      gap: 14px;
     }
 
-    .fade-out{opacity:0;pointer-events:none;transition:.8s}
+    @keyframes bounce {
+      0%,100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
+    }
   </style>
 </head>
 
 <body>
 
-<!-- ===== PASSWORD ===== -->
+<!-- ================= PASSWORD ================= -->
 <div class="password-screen" id="passwordScreen">
   <div class="pass-container">
-    <img src="Infeeno.png" class="pass-logo">
+    <img src="Infeeno.png" class="pass-logo" alt="UDI">
     <input id="passInput" placeholder="Password..." autocomplete="off">
     <div class="pass-error" id="passError">Wrong Password!</div>
   </div>
-  <div class="footer">© 2025 UDI │ contact@udi.ninja</div>
 </div>
 
-<!-- ===== MAIN ===== -->
-<div class="container" id="mainForm" style="display:none;">
-  <img src="Unseal.png" class="logo">
+<!-- ================= FORM ================= -->
+<div class="container" id="mainForm">
+  <img src="Unseal.png" class="logo" alt="UDI">
 
-  <div id="formElements">
-    <div class="instructions">
-      Make sure completed all steps to be eligible for the Whitelist
-    </div>
-
-    <div class="input-wrap"><input id="twitter" class="compact-input" placeholder="@username..."></div>
-    <div class="input-wrap"><input id="wallet" class="compact-input" placeholder="0x...eth"></div>
-    <div class="input-wrap"><input id="retweetLink" class="compact-input" placeholder="udi comment link"></div>
-
-    <div class="checkbox-group">
-      <label class="checkbox-label"><input type="checkbox" class="checkbox" id="likeCheck">Like</label>
-      <label class="checkbox-label"><input type="checkbox" class="checkbox" id="retweetCheck">Retweet</label>
-      <label class="checkbox-label"><input type="checkbox" class="checkbox" id="followCheck">Follow</label>
-    </div>
-
-    <button id="submitBtn">SUBMIT</button>
+  <div class="instructions">
+    Complete all X tasks to be eligible for the Whitelist
   </div>
+
+  <input id="twitter" class="compact-input" placeholder="@username">
+  <input id="wallet" class="compact-input" placeholder="0x...ETH wallet">
+  <input id="retweetLink" class="compact-input" placeholder="Your comment link containing 'udi'">
+
+  <div class="checkbox-group">
+    <label class="checkbox-label">
+      <input type="checkbox" class="checkbox" id="likeCheck"> Like
+    </label>
+    <label class="checkbox-label">
+      <input type="checkbox" class="checkbox" id="retweetCheck"> Retweet
+    </label>
+    <label class="checkbox-label">
+      <input type="checkbox" class="checkbox" id="followCheck"> Follow
+    </label>
+  </div>
+
+  <button id="submitBtn">SUBMIT</button>
 
   <div class="message" id="loading">Submitting...</div>
   <div class="message error-msg" id="error"></div>
   <div class="message welcome" id="welcome">Welcome to UDION!</div>
-
-  <div class="footer">© 2025 UDI │ contact@udi.ninja</div>
 </div>
 
 <script>
-  const PASSWORD = 'tridy';
-  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwqOQBmy5JighmyWMLijzMiVswlgoQta_wQZ3020BwZj9XIYoMMV5mXAaHRvLlA53ts/exec';
+/* ================= CONFIG ================= */
+const SCRIPT_URL = 'YOUR_GOOGLE_SCRIPT_URL';
 
-  const passInput = document.getElementById('passInput');
-  const passError = document.getElementById('passError');
-  const passwordScreen = document.getElementById('passwordScreen');
-  const mainForm = document.getElementById('mainForm');
+const X_LINKS = {
+  like: 'https://x.com/udininja/status/XXXXXXXX',
+  retweet: 'https://x.com/udininja/status/XXXXXXXX',
+  follow: 'https://x.com/udininja'
+};
 
-  passInput.focus();
-  passInput.oninput = () => {
-    passInput.value = passInput.value.toLowerCase().trim();
-    passError.classList.remove('show');
+/* ================= PASSWORD ================= */
+const passInput = document.getElementById('passInput');
+const passError = document.getElementById('passError');
 
-    if(passInput.value === PASSWORD){
-      passwordScreen.style.display='none';
-      mainForm.style.display='flex';
-    } else if(passInput.value.length >= PASSWORD.length){
-      passError.classList.add('show');
+passInput.focus();
+passInput.addEventListener('input', () => {
+  passInput.value = passInput.value.toLowerCase().trim();
+  passError.classList.remove('show');
+
+  if (passInput.value === 'tridy') {
+    document.getElementById('passwordScreen').style.display = 'none';
+    document.getElementById('mainForm').style.display = 'flex';
+  } else if (passInput.value.length >= 5) {
+    passError.classList.add('show');
+  }
+});
+
+/* ================= X TASKS (ANTI SPAM) ================= */
+const opened = { like:false, retweet:false, follow:false };
+
+function bindTask(id, key, url) {
+  const el = document.getElementById(id);
+  el.addEventListener('change', () => {
+    if (el.checked && !opened[key]) {
+      window.open(url, '_blank');
+      opened[key] = true;
     }
-  };
+  });
+}
 
-  const isValidEth = a => /^0x[a-fA-F0-9]{40}$/.test(a);
+bindTask('likeCheck', 'like', X_LINKS.like);
+bindTask('retweetCheck', 'retweet', X_LINKS.retweet);
+bindTask('followCheck', 'follow', X_LINKS.follow);
+
+/* ================= SUBMIT ================= */
+function isValidEth(addr) {
+  return /^0x[a-fA-F0-9]{40}$/.test(addr);
+}
+
+document.getElementById('submitBtn').onclick = async () => {
+  const tw = twitter.value.trim();
+  const wl = wallet.value.trim();
+  const rl = retweetLink.value.trim();
+
+  error.style.display = welcome.style.display = 'none';
+
+  if (!tw || !wl || !rl) {
+    error.textContent = 'Please fill all fields';
+    return error.style.display = 'block';
+  }
+
+  if (!likeCheck.checked || !retweetCheck.checked || !followCheck.checked) {
+    error.textContent = 'Please complete all X tasks';
+    return error.style.display = 'block';
+  }
+
+  if (!isValidEth(wl)) {
+    error.textContent = 'Invalid ETH wallet';
+    return error.style.display = 'block';
+  }
+
+  loading.style.display = 'block';
+
+  await fetch(SCRIPT_URL, {
+    method: 'POST',
+    headers: {'Content-Type':'text/plain'},
+    body: JSON.stringify({
+      twitter: tw.startsWith('@') ? tw : '@'+tw,
+      wallet: wl.toLowerCase(),
+      retweetLink: rl,
+      timestamp: new Date().toISOString()
+    })
+  });
+
+  loading.style.display = 'none';
+  welcome.style.display = 'block';
+};
 </script>
 
 </body>
