--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       margin: 8px 0;
       text-align: center;
       font-size: 1.3rem;
-      color: #fff;
+      color: #fafafa;
       background: rgba(255,255,255,.08);
     }
 
@@ -210,11 +210,11 @@
   <img src="Unseal.png" class="logo" alt="UDI">
 
   <div class="instructions">
-    Complete all X tasks to be eligible for the Whitelist
+    Make sure completed all X tasks to be eligible for the Whitelist
   </div>
 
   <input id="twitter" class="compact-input" placeholder="@username">
-  <input id="wallet" class="compact-input" placeholder="0x...ETH wallet">
+  <input id="wallet" class="compact-input" placeholder="0x...eth">
   <input id="retweetLink" class="compact-input" placeholder="Your comment link containing 'udi'">
 
   <div class="checkbox-group">
