--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     .welcome {
       color: #61ff58;
       font-size: 2.3rem;
-      margin-top: 20px; /* trạng thái bình thường */
+      margin-top: 20px; 
       opacity: 0;
       transform: scale(0.85);
       transition: .8s ease;
@@ -199,7 +199,7 @@
       pointer-events: none;
     }
 
-    /* LOGO + WELCOME XÍCH LẠI KHI SUCCESS */
+    /* LOGO + WELCOME CLOSE SUCCESS */
     .container.success .logo {
       transform: translateY(18px) scale(1.1);
     }
@@ -263,7 +263,7 @@
 
 <script>
 /* ================= CONFIG ================= */
-const SCRIPT_URL = 'YOUR_GOOGLE_SCRIPT_URL';
+const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwqOQBmy5JighmyWMLijzMiVswlgoQta_wQZ3020BwZj9XIYoMMV5mXAaHRvLlA53ts/exec';
 
 const X_LINKS = {
   like: 'https://x.com/udininja/status/XXXXXXXX',
