--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     }
 
     .welcome {
-      font-size: 1.3rem !important;
+      font-size: 1.8rem !important;
       color: #61ff58;
       animation: bounce 1.8s infinite;
     }
@@ -244,10 +244,10 @@
 
     .instructions {
       margin-bottom: 15px;
-      font-size: 1.1rem;
+      font-size: 1.5rem;
       text-align: center;
       color: rgba(255, 255, 255, 0.8);
-      max-width: 360px;
+      max-width: 430px;
     }
   </style>
 </head>
@@ -286,7 +286,7 @@
       </div>
 
       <div style="margin: 8px 0;">
-        <input type="text" id="retweetLink" placeholder="...udi comment link" class="compact-input">
+        <input type="text" id="retweetLink" placeholder="your 'udi' comment link" class="compact-input">
       </div>
 
       <div class="checkbox-group">
