--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       </div>
 
       <div class="checkbox-group">
-        <label class="checkbox-label">
+        <label class="checkbox-label" data-url="https//:x.com/udininja">
           <input type="checkbox" class="checkbox" id="likeCheck">
           Like
         </label>
