--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       this.value = this.value.toLowerCase().trim();
       passError.classList.remove('show');
 
-      if (this.value === 'tridy') {
+      if (this.value === 'udion') {
         passwordScreen.style.opacity = '0';
         setTimeout(() => {
           passwordScreen.style.display = 'none';
