--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   <div class="password-screen" id="passwordScreen">
     <div class="pass-container">
       <img src="Infeeno.png" alt="UDI" class="pass-logo">
-      <input type="text" inputmode="text" id="passInput" placeholder="Password..." autocomplete="off">
+      <input type="text" inputmode="text" id="passInput" placeholder="Coming soon" autocomplete="off">
       <div class="pass-error" id="passError">Wrong Password!</div>
     </div>
 
@@ -332,7 +332,7 @@
       this.value = this.value.toLowerCase().trim();
       passError.classList.remove('show');
 
-      if (this.value === 'udion') {
+      if (this.value === 'cacou') {
         passwordScreen.style.opacity = '0';
         setTimeout(() => {
           passwordScreen.style.display = 'none';
