--- a/index.html
+++ b/index.html
@@ -249,7 +249,27 @@
       color: rgba(255, 255, 255, 0.8);
       max-width: 430px;
     }
-  </style>
+    .check-icon {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 14px;
+      width: 34px;
+      height: 34px;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.15);
+      color: white;
+      font-size: 1.2rem;
+      text-decoration: none;
+      transition: all .25s ease;
+     }
+
+    .check-icon:hover {
+      background: white;
+      color: #fd8c00;
+      transform: scale(1.1);
+     }
+</style>
 </head>
 <body>
 
@@ -260,6 +280,8 @@
       <input type="text" inputmode="text" id="passInput" placeholder="Coming soon" autocomplete="off">
       <div class="pass-error" id="passError">Wrong Password!</div>
     </div>
+    <a href="/check" class="check-icon" title="">ⓘ</a>
+
 
     <div class="footer">
       <span>© 2025 UDI. All rights reserved.</span>
