--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       <input type="text" inputmode="text" id="passInput" placeholder="Coming soon" autocomplete="off">
       <div class="pass-error" id="passError">Wrong Password!</div>
     </div>
-    <a href="/check" class="check-icon" title="">ⓘ</a>
+    <a href="/check" class="check-icon" title="">🎁</a>
 
 
     <div class="footer">
