--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       background: rgba(255,255,255,0.15);
       color: white;
       font-size: 1.2rem;
-      text-decoration: none;
+      text-decoration: none !important;
       transition: all .25s ease;
      }
 
