--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
       border-radius: 50%;
       background: rgba(255,255,255,0.15);
       color: white;
-      font-size: 1.2rem;
-      text-decoration: none !important;
+      font-size: 1.5rem;
+      text-decoration: none;
       transition: all .25s ease;
      }
 
